Clean-up metamodel frontends.