@@ -46,7 +46,7 @@ class MinimalModelInstanceTest {
         TokenList result = frontend.parse(baseDirectory, testSubjects);
         assertNotEquals(0, result.size());
 
-        List<String> treeViewFiles = Arrays.stream(testSubjects).map(it -> it + Language.VIEW_FILE_SUFFIX).collect(toList());
+        List<String> treeViewFiles = Arrays.stream(testSubjects).map(it -> it + Language.VIEW_FILE_SUFFIX).toList();
         logger.debug(TokenPrinter.printTokens(result, baseDirectory, treeViewFiles));
         logger.info("Dynamic token set: " + DynamicMetamodelTokenConstants.getTokenStrings());
         logger.info("Parsed tokens: " + result.allTokens().toString());
